sbt: generously increase memory and GC options for Java process.
In testing my Scala Migrations project using the previous $JAVA_OPTS,
java would frequently run out of memory.

git-svn-id: https://svn.macports.org/repository/macports/trunk/dports@97998 d073be05-634f-4543-b044-5fe20cf6d1d6